# fanta

./: DECISIONS.md  PROGRESS.md  README.md  SPEC-FANTA.md  pyproject.toml  verify.sh
config/: rules_lega.yaml  sources.yaml
data/canonical/: fanta.duckdb
data/raw/storico_aggregato/2021-22/: entity_review.csv  unmatched_players.csv
data/raw/storico_aggregato/2022-23/: entity_review.csv  unmatched_players.csv
data/raw/storico_aggregato/2023-24/: entity_review.csv  unmatched_players.csv
data/raw/storico_aggregato/2024-25/: entity_review.csv  stats.xlsx  unmatched_players.csv
src/fanta/: __init__.py  cli.py
src/fanta/domain/: models.py
src/fanta/entity/: resolver.py  uid.py
src/fanta/pipeline/: listone.py  schema.py  storico.py
src/fanta/rules/: __init__.py  fantavoto.py  loader.py  models.py
src/fanta/sources/: base.py  listone_ufficiale.py  storico_aggregato.py
tests/: test_listone_download.py  test_m1_pipeline.py  test_m2_m3.py  test_rules_loader.py
